optimized: long64 encoding, tuple toString function